[metadata]
name = Mopidy-Twitch
version = 1.0.0
url = https://github.com/Drizzt321/mopidy_twitch
author = Aaron Baff
author_email = drizzt321@gmail.com
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for playing audio only stream from Twitch
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0.0
    setuptools
    streamlink >= 5.5.1


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-import-order
    isort[pyproject]
test =
    pytest
    pytest-cov
    vcrpy
dev =
    %(lint)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    soundcloud = mopidy_twitch:Extension
